cache cell positions when searching in calc (tdf#108347)

The document has a large number of rows, and mdds normally always searches
from the first item when looking up the container position, which leads
to a quadratic cost when searching the entire sheet. GetCellValue()
already has a variant that caches the last position, so just use it
(and make sure to invalidate if it's search&replace and something changes).

Change-Id: I26da60cebf641e10ed92e548fe5f9016900d3cf0
Reviewed-on: https://gerrit.libreoffice.org/72290
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>